--- a/src/app/features/queueing-layout/queue-display/queue-display.component.css
+++ b/src/app/features/queueing-layout/queue-display/queue-display.component.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 * {
   margin: 0;
@@ -27,7 +27,7 @@
   padding-bottom: 20px;
 }
 
-/* Left Section */
+
 .left-section {
   position: absolute;
   top: 20px;
@@ -40,8 +40,9 @@
 }
 
 .logo {
-  width: 200px;
+  width: 150px;
   margin-right: 20px;
+  height: auto;
 }
 
 .title h1 {
@@ -119,7 +120,7 @@
   color: #212529;
 }
 
-/* Right Section */
+
 .right-section {
   display: flex;
   flex-direction: column;
@@ -133,7 +134,6 @@
   height: calc(100% - 100px);
 }
 
-/* Centered Widgets (Currency, Time, and Weather) */
 .centered-widgets {
   display: flex;
   flex-direction: column;
@@ -143,7 +143,6 @@
   height: auto;
 }
 
-/* Header Info (Currency and Time) */
 .header-info {
   display: flex;
   flex-direction: row;
@@ -164,7 +163,7 @@
   
 }
 
-/* Currency Widget */
+
 .currency-info {
   background-color: white;
   color: #212529;
@@ -212,7 +211,7 @@
   color: #f5a425;
 }
 
-/* Time Widget */
+
 .time-info {
   flex: 2;
   background-color: white;
@@ -237,7 +236,7 @@
   color: #3b523f;
 }
 
-/* Weather Section */
+
 .weather-section {
   display: flex;
   justify-content: center;
@@ -263,7 +262,7 @@
   max-width: 100%;
 }
 
-/* Up Next Section */
+
 .up-next-section {
   width: 100%;
   background-color: #fff;
@@ -274,7 +273,7 @@
   font-size: 2rem;
 }
 
-/* Up Next List Items */
+
 .up-next-list {
   display: flex;
   flex-direction: column;
@@ -314,7 +313,7 @@
   color: #212529;
 }
 
-/* Announcement Section */
+
 .announcement-bar {
   position: absolute;
   bottom: 0;
@@ -333,4 +332,4 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
+} */
